3.1.1/installation/technical-requirements.md
---
type: page
title: Technical Requirements
listed: true
description: 
index_title: Technical Requirements
hidden: false
keywords: 
tags: 
---

## Minimum Requirements (on premise)

- **Ubuntu Server 22.04** LTS ("Jammy Jellyfish") or **Ubuntu Server 24.04** LTS ("Noble") or **Red Hat Enterprise Linux 9.x** or **Rocky Linux 9.x**:
  - Support for CIS-hardened **Ubuntu Server 24.04** ("Noble") machines is not yet available
  - Support for **Ubuntu Server 20.04** LTS ("Focal Fossa") was dropped with the 2.0.0 Release
  - Please download the Ubuntu ISO image from: [https://releases.ubuntu.com/noble/](https://releases.ubuntu.com/noble/)

{% callout type="warning" title="Plan for legacy OS support" %}
OPSWAT will discontinue support for the following OS in MetaDefender Aether/Sandbox:

- **Ubuntu 22.04** from **Apr 2027**.
{% /callout %}

- 8 vCPUs (Preferably 16 vCPUs): a **CPU with AVX support is required** as the Sandbox includes MongoDB: [https://www.mongodb.com/docs/manual/administration/production-notes/#x86\_64](https://www.mongodb.com/docs/manual/administration/production-notes/#x86_64)
- 32 GB RAM (essential for scanning files *larger than 1 GB*)
- 256 GB **Free Disk Space** (SSD)\_: Sandbox requires 32 GB on the first installation (subsequent upgrades will potentially consume more disk space). More information for *\_multi-partition layouts*\*: [Low disk space](../troubleshooting/low-disk-space.md)
  - Please note that the **Ubuntu server installer** will configure the main disk as an LVM group by default (2 partitions mirroring each other). For example, on a 100 GB disk you will get approx. 50 GB usable storage. This provides redundancy and better data safety, so please consider doubling your disk size. Alternatively, you can uncheck the  *"Set up this disk as an LVM group"* option during the Ubuntu installation, see: [https://ubuntu.com/server/docs/install/storage](https://ubuntu.com/server/docs/install/storage)
  - \*Disk space recommendation is assuming default retention settings and an average file size is assumed to be in the single digit MB range. If very large files are sent at large quantities, total disc size has to be much larger or retention settings more strict.
- Internet access is required during the installation \& upgrade process, except for [Offline Installation](offline-installation.md).
- The "minimized" version of Ubuntu Server is NOT suitable for **offline installations**, since it lacks some essential packages. Please select "Ubuntu Server" here: {% inline-image url="../../assets/e9fca8758fea1b180a905b05ed25cc108fe2e297.png" /%}

*Note: More than 25000 scans/day requires a custom multi-server setup and needs to be scoped out with the engineering team.*

Due to the low resource requirements and cloud-native capability, the Sandbox does not require nested VMs and can be deployed and operate with its proprietary virtualization technology directly on the host system.

## Feature availability by OS version

{% table layout="auto" %}
{% row %}
{% cell header=true colwidth=[249] %}
Feature/os
{% /cell %}
{% cell header=true %}
Ubuntu 22.04
{% /cell %}
{% cell header=true %}
Ubuntu 24.04
{% /cell %}
{% cell header=true %}
Red Hat 9.5 (or newer)
{% /cell %}
{% cell header=true %}
Rocky Linux 9.5 (or newer)
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Online Install
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Online Install via Proxy
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Offline Install
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% /row %}
{% row %}
{% cell %}
Install on CIS level 2 hardened system
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**X**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% cell %}
**✓**
{% /cell %}
{% /row %}
{% /table %}

## Throughput / Minimum Requirements

The following table lists explanatory system specs with a retention period of 10 days:

{% table layout="auto" %}
{% row %}
{% cell header=true %}
Scans Per Day
{% /cell %}
{% cell header=true %}
Required System CPUs
{% /cell %}
{% cell header=true %}
Required System RAM
{% /cell %}
{% cell header=true %}
Required Storage per Retention Period
{% /cell %}
{% /row %}
{% row %}
{% cell %}
1000
{% /cell %}
{% cell %}
4
{% /cell %}
{% cell %}
32 GB
{% /cell %}
{% cell %}
100 GB
{% /cell %}
{% /row %}
{% row %}
{% cell %}
2500
{% /cell %}
{% cell %}
4
{% /cell %}
{% cell %}
32 GB
{% /cell %}
{% cell %}
100 GB
{% /cell %}
{% /row %}
{% row %}
{% cell %}
5000
{% /cell %}
{% cell %}
4
{% /cell %}
{% cell %}
32 GB
{% /cell %}
{% cell %}
256 GB
{% /cell %}
{% /row %}
{% row %}
{% cell %}
10000
{% /cell %}
{% cell %}
8
{% /cell %}
{% cell %}
32 GB
{% /cell %}
{% cell %}
512 GB
{% /cell %}
{% /row %}
{% row %}
{% cell %}
25000\*
{% /cell %}
{% cell %}
16
{% /cell %}
{% cell %}
32 GB
{% /cell %}
{% cell %}
512 GB
{% /cell %}
{% /row %}
{% /table %}

\*Currently the maximum numbers of scans/day per instance

## Minimum Cloud Requirements (AWS)

- 5000 scans/day: `r6a.xlarge`
- 10000 scans/day: `m6a.2xlarge`
- 25000 scans/day: `c6a.4xlarge`

## Network Setup

It is recommended to run the product in a segregated network segment, or to operate the sandbox in a DMZ entirely.
